--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "concurrently \"npm run server\" \"npm run dev\"",
+    "server": "node src/server.js"  
   },
   "dependencies": {
     "@emotion/react": "^11.13.5",
@@ -16,7 +18,10 @@
     "antd": "^5.22.2",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.6",
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
     "lucide-react": "^0.462.0",
+    "mysql2": "^3.11.5",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.6",
     "react-chartjs-2": "^5.2.0",
@@ -31,6 +36,7 @@
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.20",
+    "concurrently": "^9.1.0",
     "eslint": "^9.16.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.37.2",
